--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "isparta": "4.0.0",
+    "material-ui": "0.16.1",
     "mocha": "3.0.2",
     "mockdate": "1.0.4",
     "node-sass": "3.8.0",
@@ -77,6 +78,7 @@
     "postcss-loader": "0.11.0",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.3.1",
+    "react-tap-event-plugin": "1.0.0",
     "redux-immutable-state-invariant": "1.2.3",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
